Solving display issue on mobile
On mobile phone (Android at least), when opening the app, the bottom of the screen is (often) cropped: the "Load more" and "Logout" buttons at the bottom of the display are hardly visible. With the latest devs (dual window display on desktop), this effect on mobile phone is even worse (impossible to click on these buttons at the bottom of the screen. => Solved it very simply by adding an additional 100px padding which elevates the bottom of the display and makes these buttons visible when they were not previously.

--- a/src/styles.css
+++ b/src/styles.css
@@ -992,7 +992,7 @@ app-root settings .settingsPage {
   max-width: none;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0 0 100px 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -1212,6 +1212,7 @@ app-root profile .profileContainer {
   max-width: none;
   width: 100%;
   margin: 0;
+  padding-bottom: 100px;
 }
 
 app-root profile .island {
